[package]
name = "uber-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9"
futures-core = "0.3"
log = "0.4"
mlua = { version = "0.7", features = ["lua54"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.6" }
tower = "0.4"
uber-protos = { path = "../uber-protos" }
uuid = { version = "0.8", features = ["v4"] }
